Minor fix for the spacing on One page mode

--- a/code/less/template.less
+++ b/code/less/template.less
@@ -1159,8 +1159,8 @@ span.content_rating{
 }
 [id*="singlepage_"] {
 	> div{
-		padding-top: 15px;
-		padding-bottom: 15px;
+		padding-top: 40px;
+		padding-bottom: 40px;
 		.rm-margin-child();
 	}
 }
